<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DRdisSys</string>
    <string name="hello_world">Hello world!</string>
	<string name="field_trace_string">射野跟踪</string>
	<string name="reset_button_string">重置</string>
	<string name="move_follow_string">随动指示</string>
	<string name="send_data_format_error">发送数据格式错误</string>
	<string name="grid_mateial_al">铝</string>
	<string name="grid_mateial_carbon">碳</string>
	
	<string name="engineering_return_button_text">返回</string>
	<string name="engineering_heads_title_1">"程序选项设置"</string>
	<string name="engineering_heads_sum_1">"设置应用的相关选项"</string>
	
	<string name="ip_group_title">"IP参数设置组"</string>
	<string name="local_ip_title">"填写PC的IP"</string>
	<string name="local_ip_summary">"该IP为运行 DROC电脑的IP"</string>
	<string name="local_ip_dialog_title">"请输入IP"</string>
	
	<string name="server_name_title">"填写服务器的域名"</string>
	<string name="server_name_summary">"域名是七喜医疗服务器域名"</string>
	<string name="server_name_dialog_title">"请输入服务器域名"</string>
	<string name="server_name_default_value">"www.hedymed.com"</string>
	
	<string name="rotation_group_title">"旋转功能设置组"</string>
	<string name="rotation_switch_title">"旋转使能"</string>
	<string name="rotation_switch_sum_on">"旋转功能已开启"</string>
	<string name="rotation_switch_sum_off">"旋转功能已关闭"</string>
	
	<string name="rotation_angle_title">"选择旋转角度"</string>
	<string name="rotation_angle_summary">"选择旋转角度"</string>
	<string name="rotation_angle_dialog_title">"旋转角度"</string>
	
	<string name="video_play_group_title">"视频播放"</string>
	<string name="popup_window_text">"曝光中"</string>
	
</resources>
