<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android">
    
	<PreferenceCategory android:title="@string/ip_group_title">
		<!-- 运行DROCPC的IP地址 -->
		<EditTextPreference
			android:key="localIP"
			android:title="@string/local_ip_title"
			android:summary="@string/local_ip_summary"
			android:dialogTitle="@string/local_ip_dialog_title" />
		
		<!-- HEDYMED 服务器域名 -->
		<EditTextPreference
			android:key="HedymedSeverName"
			android:title="@string/server_name_title"
			android:summary="@string/server_name_summary"
			android:dialogTitle="@string/server_name_dialog_title" 
			android:defaultValue="@string/server_name_default_value"/>
		
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/rotation_group_title">
		<CheckBoxPreference
			android:key="rotation_enable"
			android:title="@string/rotation_switch_title"
			android:summaryOn="@string/rotation_switch_sum_on"
			android:summaryOff="@string/rotation_switch_sum_off"
			android:defaultValue="true" />
		
		<ListPreference 
		    android:key="rotation_angle"
		    android:title="@string/rotation_angle_title"
		    android:dialogTitle="@string/rotation_angle_dialog_title"
		    android:entries="@array/rotation_angle_list"
		    android:entryValues="@array/rotation_value_list"/>
		
	</PreferenceCategory>	
	
</PreferenceScreen>
