<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
    android:background="@drawable/first_frgment_background">>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        
         <Spinner
            android:id="@+id/sample_mode_selecter"
            android:layout_width="400dp"
            android:layout_height="96dp"
            android:layout_marginLeft="76dp"
            android:background="@drawable/sample_mode_select_back"
            android:popupBackground="@color/drop_down_background" />
         
         <ToggleButton
            android:id="@+id/move_follow_button"
            android:layout_width="400dp"
            android:layout_height="98dp"
            android:layout_marginLeft="54dp"
            android:background="@drawable/move_follow_state_list"
            android:button="@null"
            android:textOn="@string/move_follow_string" 
            android:textOff="@string/move_follow_string" 
            android:paddingLeft="173dp"
            android:textColor="@color/text_white_color"
            android:textSize="@dimen/id_dis_size" />
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
         
        <Spinner
            android:id="@+id/filter_selecter"
            android:layout_width="234dp"
            android:layout_height="136dp"
            android:layout_marginLeft="242dp"
            android:background="@drawable/filter_background"
            android:popupBackground="@color/drop_down_background" />
         
         <Button
            android:id="@+id/reset_button"
            android:layout_width="236dp"
            android:layout_height="136dp"
            android:layout_marginLeft="54dp"
            android:background="@drawable/reset_background_select_list"
            android:text="@string/reset_button_string" 
            android:paddingLeft="109dp"
            android:textColor="@color/text_white_color"
            android:textSize="@dimen/id_dis_size" />
         
         <Button 
            android:id="@+id/video_play_button"
	        android:layout_width="wrap_content"
	        android:layout_height="136dp"
	        android:layout_marginLeft="54dp"
	        android:background="@drawable/video_play_button_background"
	        android:text="@string/video_play_group_title"
        />
        
    </LinearLayout>     
</LinearLayout>
